Bug 1593408 [Wayland] Position mozcontainer wayland subsurface at moz_container_move(), r=jhorak

WebRender does not call moz_container_get_wl_egl_window() before each frame so mozcontainer
is not positioned properly here.

As a fix position mozcontainer directly at moz_container_move() if there are resources
for it.

Also always call moz_container_get_wl_surface() at moz_container_get_wl_egl_window()
to make sure an underlying mozcontainer surface is properly positioned.

Differential Revision: https://phabricator.services.mozilla.com/D52362

--HG--
extra : moz-landing-system : lando